Added div elements

--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
   </head>
 
   <body>
-    <pre>
-Sławomir Zabkiewicz
-
+    <div>
+      Sławomir Zabkiewicz
+    </div>
+    <div>
 -------------------------------------------------------------------------------
 Summary
 -------------------------------------------------------------------------------
+    </div>
+    <div>
 I create complex, enterprise-class, mission-critical applications using innovative tools and technologies. My areas of expertise include professional software engineering practices for the full software development life cycle, including coding standards, code reviews, source control management, build processes, testing and operations.
 
 Programming languages:
@@ -49,15 +52,17 @@ Big Query
 
 I have strong desire to build safe and world-changing systems.
 I'm passionate in my work and I love to share ideas with my team, I keep up to date with technology trends and believe in life-long learning and I have strong tolerance for really bad jokes :)
-
+</div>
+    <div>
 -------------------------------------------------------------------------------
 Experience
 -------------------------------------------------------------------------------
-
+    </div>
+    <div>
 -------------------------------------------------------------------------------
 Education
 -------------------------------------------------------------------------------
-</pre>
+</div>
   </body>
 </html>
 
