--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
         <h1>Sławomir Zabkiewicz</h1>
         <h2>Implements Thinkable</h2>
       </div>
+
+      <section id="downloads">
+	<a href="https://www.linkedin.com/in/zabkiewicz" class="btn">LinkedIn</a>
+	<a href="https://www.filepicker.com" class="btn">Filepicker</a>
+	<a href="http://www.sunweather.net" class="btn">Sunweather</a>
+      </section>
     </header>
 
     <div class="container">
