Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -17,21 +17,121 @@
       <div class="container">
         <h1>Sławomir Zabkiewicz</h1>
         <h2>Implements Thinkable</h2>
-      </div>
 
-      <section id="downloads">
-	<a href="https://www.linkedin.com/in/zabkiewicz" class="btn">LinkedIn</a>
-	<a href="https://www.filepicker.com" class="btn">Filepicker</a>
-	<a href="http://www.sunweather.net" class="btn">Sunweather</a>
-      </section>
+        <section id="downloads">
+          <a href="https://github.com/kyuss/cv/zipball/master" class="btn">Download as .zip</a>
+          <a href="https://github.com/kyuss/cv/tarball/master" class="btn">Download as .tar.gz</a>
+          <a href="https://github.com/kyuss/cv" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+        </section>
+      </div>
     </header>
 
     <div class="container">
       <section id="main_content">
-        <h3>
-<a id="sławomir-zabkiewicz" class="anchor" href="#s%C5%82awomir-zabkiewicz" aria-hidden="true"><span class="octicon octicon-link"></span></a>Sławomir Zabkiewicz</h3>
+        <p>I create complex, enterprise-class, mission-critical applications using innovative tools and technologies. My areas of expertise include professional software engineering practices for the full software development life cycle, including coding standards, code reviews, source control management, build processes, testing and operations.</p>
 
-<p>I create complex, enterprise-class, mission-critical applications using innovative tools and technologies. My areas of expertise include professional software engineering practices for the full software development life cycle, including coding standards, code reviews, source control management, build processes, testing and operations.</p>
+<h2>
+<a id="experience" class="anchor" href="#experience" aria-hidden="true"><span class="octicon octicon-link"></span></a>Experience</h2>
+
+<h3>
+<a id="vp-engineering---filepicker" class="anchor" href="#vp-engineering---filepicker" aria-hidden="true"><span class="octicon octicon-link"></span></a>VP Engineering - Filepicker</h3>
+
+<p><em>May 2014 – Present (1 year), Kraków Area, Poland</em></p>
+
+<ul>
+<li>I oversee technical development team toward fulfilling product roadmap.</li>
+<li>I'm responsible for writing code, managing infrastructure and playing an active role in 
+developing new features. </li>
+<li>I report directly to CEO to define a prioritised backlog of projects that the team will tackle and then ensure these milestones are accomplished through active monitoring of the team and own technical contribution. </li>
+</ul>
+
+<h3>
+<a id="cto---sunweather" class="anchor" href="#cto---sunweather" aria-hidden="true"><span class="octicon octicon-link"></span></a>CTO - SunWeather</h3>
+
+<p><em>April 2012 – November 2014 (2 years 8 months), Kraków Area, Poland</em></p>
+
+<ul>
+<li>I have engineered solar wind monitoring application that collects data from the Advanced Composition Explorer (ACE) satellite and measures the solar wind speed, density and temperature. ACE is located at Lagrange Point L1 which is about the 1/100th of the Sun-Earth distance and application was able to identify hazardous solar flares and alert in advance, before they hit the Earth.</li>
+<li>Solution created with Go, Google AppEngine (Datastore API, Memcache API, Channels API)</li>
+</ul>
+
+<h3>
+<a id="cto---servecloud" class="anchor" href="#cto---servecloud" aria-hidden="true"><span class="octicon octicon-link"></span></a>CTO - ServeCloud</h3>
+
+<p><em>February 2011 – March 2014 (3 years 2 months), Katowice, Silesian District, Poland</em></p>
+
+<ul>
+<li>I have managed technical team to deliver first polish PAAS and utility billing system.</li>
+<li>I have engineered cloud solution in white-label model within one of the biggest polish telecoms b2b product portfolio scope.</li>
+<li>I have engineered and managed Citrix XenServer cluster.</li>
+<li>I have engineered highly scalable platform able to digests thousands of request per second and serving monitoring charts to the customers. 
+-I have created WebSockets based VNC proxy server that allows customers to interface with their virtual machines using RFB protocol. Implemented key-based, secure authentication solution around RFB stream delivered from XenServer hypervisors.</li>
+<li>I have designed, configured and managed multiple VPN networks for corporate customers.</li>
+</ul>
+
+<h3>
+<a id="cto---dediserve" class="anchor" href="#cto---dediserve" aria-hidden="true"><span class="octicon octicon-link"></span></a>CTO - DediServe</h3>
+
+<p><em>March 2013 – June 2013 (4 months), Dublin, Ireland</em></p>
+
+<ul>
+<li>I have anaged technical team to deliver scalable, flexible and reliable multi-region PAAS system.</li>
+<li>I have supervised and organised work of remote teams in multiple datacenter locations.</li>
+<li>I have designed and implemented infrastructure management system (50+ instances). Developed Puppet modules to manage Xen based hosts, OnApp installations, web servers, Billing System, Zabbix monitoring tool instance and Zimbra mail server.</li>
+<li>I have managed multiple instances of BladeSystem c7000 Enclosure, number of ProLiant BL460c G7/G8 servers, HP VC Flex-10 enet modules, Cisco Catalyst Switches and D2200sb Storage Blades.</li>
+</ul>
+
+<h3>
+<a id="systems-architect---digital-mines" class="anchor" href="#systems-architect---digital-mines" aria-hidden="true"><span class="octicon octicon-link"></span></a>Systems Architect - Digital Mines</h3>
+
+<p><em>April 2010 – February 2011 (11 months), Kraków Area, Poland</em></p>
+
+<ul>
+<li>I have created resource based utility billing system and integrated it with number of 3rd party API’s, including Amazon AWS and PayPal. Implemented scheduling system for invoices generation.</li>
+<li>I have engineered distributed monitoring system for Amazon EC2 based virtual machines. Designed and implemented asynchronous message queue between backend servers and C++ based clients which were installed on EC2 virtual machines automatically during provisioning process. </li>
+<li>I have implemented custom cryptographic system based on Blowfish algorithm and key exchange.</li>
+</ul>
+
+<h3>
+<a id="lead-software-engineer---hosting365" class="anchor" href="#lead-software-engineer---hosting365" aria-hidden="true"><span class="octicon octicon-link"></span></a>Lead Software Engineer - Hosting365</h3>
+
+<p><em>May 2006 – February 2009 (2 years 10 months), Kraków Area, Poland</em></p>
+
+<ul>
+<li>I have engineered innovative, complex cloud management solution based on service oriented system that groups number of loosely coupled modules. It was called NetOS and it was one of the first enterprise ready, cloud management systems available.</li>
+<li>I have engineered domain registration and shared hosting management system (Register365, Acquired by Namesco Ltd in 2009). Integrated multiple 3rd party API’s such as Enom, Tucows, IEDR, as well as payment gateways like PayPal and Realex. Integrated shared hosting platform based on Parallels H-Sphere.</li>
+</ul>
+
+<h3>
+<a id="software-engineer---copycon" class="anchor" href="#software-engineer---copycon" aria-hidden="true"><span class="octicon octicon-link"></span></a>Software Engineer - CopyCon</h3>
+
+<p><em>July 2005 – May 2006 (11 months), Radom, Masovian District, Poland</em></p>
+
+<ul>
+<li>I have engineered multiple websites for corporate customers using innovative tools and technologies.</li>
+<li>I was responsible for maintaining close relationships with key customers on technical level.</li>
+</ul>
+
+<h2>
+<a id="education" class="anchor" href="#education" aria-hidden="true"><span class="octicon octicon-link"></span></a>Education</h2>
+
+<h3>
+<a id="École-polytechnique-fédérale-de-lausanne" class="anchor" href="#%C3%89cole-polytechnique-f%C3%A9d%C3%A9rale-de-lausanne" aria-hidden="true"><span class="octicon octicon-link"></span></a>École Polytechnique Fédérale de Lausanne</h3>
+
+<p><em>2013, 100% with distinction, Functional Programming Principles in Scala</em> </p>
+
+<h3>
+<a id="polish-japanese-academy-of-information-technology" class="anchor" href="#polish-japanese-academy-of-information-technology" aria-hidden="true"><span class="octicon octicon-link"></span></a>Polish-Japanese Academy of Information Technology</h3>
+
+<p><em>2007 – 2009, Master, Software and Database Engineering</em></p>
+
+<h3>
+<a id="technical-university-in-radom" class="anchor" href="#technical-university-in-radom" aria-hidden="true"><span class="octicon octicon-link"></span></a>Technical University in Radom</h3>
+
+<p><em>2002 – 2006, Bachelor, Computer Science</em></p>
+
+<h2>
+<a id="skills" class="anchor" href="#skills" aria-hidden="true"><span class="octicon octicon-link"></span></a>Skills</h2>
 
 <h3>
 <a id="programming-languages" class="anchor" href="#programming-languages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Programming languages:</h3>
@@ -89,4 +189,3 @@
     
   </body>
 </html>
->>>>>>> 46066d5c0b516dda14f7d37c6f29d7820bd46481
