--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <h2>Implements Thinkable</h2>
 
         <section id="downloads">
-          <a href="https://github.com/kyuss/cv/zipball/master" class="btn">Download as .zip</a>
-          <a href="https://github.com/kyuss/cv/tarball/master" class="btn">Download as .tar.gz</a>
-          <a href="https://github.com/kyuss/cv" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+          <a href="https://www.linkedin.com/in/zabkiewicz" class="btn">LinkedIn</a>
+          <a href="https://www.filepicker.com" class="btn">Filepicker</a>
+          <a href="http://www.sunweather.net" class="btn btn-github">Sunweather</a>
         </section>
       </div>
     </header>
