Update github link

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <section id="downloads">
           <a href="https://www.linkedin.com/in/zabkiewicz" class="btn">LinkedIn</a>
-          <a href="https://https://github.com/kyuss" class="btn">Github</a>
+          <a href="https://github.com/kyuss" class="btn">Github</a>
           <a href="https://www.filepicker.com" class="btn">Filepicker</a>
           <a href="http://www.sunweather.net" class="btn btn-github">Sunweather</a>
         </section>
