--- a/index.html
+++ b/index.html
@@ -29,8 +29,27 @@
 
     <div class="container">
       <section id="main_content">
-        <p>I create complex, enterprise-class, mission-critical applications using innovative tools and technologies. My areas of expertise include professional software engineering practices for the full software development life cycle, including coding standards, code reviews, source control management, build processes, testing and operations.</p>
+      <p>
+        I'm experienced <strong>(10 years) Software, Systems and DevOps</strong> engineer. I create complex, enterprise-class, mission-critical applications using innovative tools and technologies. My areas of expertise include professional software engineering practices for the full software development life cycle, including coding standards, code reviews, source control management, build processes, testing and operations.
+    </p><p>
+I have strong knowledge and experience of multiple languages and paradigms: <strong>Go (2013-), Ada (2012-), Scala (2010-), Python (2006-), Ruby (2006-)</strong>, etc. My favorite programming paradigm is a procedural programming combined with design by contract and static verification. I'm also very interested and passionate about history of procedural programming languages and their compilers. Therefore I constantly explore languages like Ada, Snobol/Spitbol, Modula-3 or Oberon.
+</p>
+<p>
+During all those years working professionally in IT I have had pleasure to work with many different operating systems and their configurations. I have strong knowledge of **Linux, BSD and Solaris-like** environments. And I have started building Cloud (Xen, XenServer) systems before they became popular ;). These days I'm working professionally with **Amazon AWS**.
+</p>
+<p>
+Yes, I'm lazy, I appreciate automation and doing **DevOps** is indispensible part of my daily work. And I love it! I have been using Puppet and Chef in the past but these days I'm sold to **Ansible**!
+</p>
+<p>I also <strong>manage teams</strong>. It's challenging but I love to coach and mentor my engineers. I have strong desire to build safe and world-changing systems. I'm passionate in my work and I love to share ideas with my team, I keep up to date with technology trends and believe in life-long learning and I have strong tolerance for really bad jokes :)</p>
 
+<i>"There are two ways of constructing a software design.
+One way is to make it so simple that there are obviously 
+no deficiencies, and the other way is to make it so complicated 
+that there are no obvious deficiencies."​</i>
+
+Professor C. A. R. Hoare
+        
+      </p>
 <h2>
 <a id="experience" class="anchor" href="#experience" aria-hidden="true"><span class="octicon octicon-link"></span></a>Experience</h2>
 
