--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ I have strong knowledge and experience of multiple languages and paradigms: <str
 During all those years working professionally in IT I have had pleasure to work with many different operating systems and their configurations. I have strong knowledge of **Linux, BSD and Solaris-like** environments. And I have started building Cloud (Xen, XenServer) systems before they became popular ;). These days I'm working professionally with **Amazon AWS**.
 </p>
 <p>
-Yes, I'm lazy, I appreciate automation and doing **DevOps** is indispensible part of my daily work. And I love it! I have been using Puppet and Chef in the past but these days I'm sold to **Ansible**!
+Yes, I'm lazy, I appreciate automation and doing <strong>DevOps</strong> is indispensible part of my daily work. And I love it! I have been using Puppet and Chef in the past but these days I'm sold to <strong>Ansible</strong>!
 </p>
 <p>I also <strong>manage teams</strong>. It's challenging but I love to coach and mentor my engineers. I have strong desire to build safe and world-changing systems. I'm passionate in my work and I love to share ideas with my team, I keep up to date with technology trends and believe in life-long learning and I have strong tolerance for really bad jokes :)</p>
 
