--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 I have strong knowledge and experience of multiple languages and paradigms: <strong>Go (2013-), Ada (2012-), Scala (2010-), Python (2006-), Ruby (2006-)</strong>, etc. My favorite programming paradigm is a procedural programming combined with design by contract and static verification. I'm also very interested and passionate about history of procedural programming languages and their compilers. Therefore I constantly explore languages like Ada, Snobol/Spitbol, Modula-3 or Oberon.
 </p>
 <p>
-During all those years working professionally in IT I have had pleasure to work with many different operating systems and their configurations. I have strong knowledge of **Linux, BSD and Solaris-like** environments. And I have started building Cloud (Xen, XenServer) systems before they became popular ;). These days I'm working professionally with **Amazon AWS**.
+During all those years working professionally in IT I have had pleasure to work with many different operating systems and their configurations. I have strong knowledge of <strong>Linux, BSD and Solaris-like</strong> environments. And I have started building Cloud (Xen, XenServer) systems before they became popular ;). These days I'm working professionally with <strong>Amazon AWS</strong>.
 </p>
 <p>
 Yes, I'm lazy, I appreciate automation and doing <strong>DevOps</strong> is indispensible part of my daily work. And I love it! I have been using Puppet and Chef in the past but these days I'm sold to <strong>Ansible</strong>!
